<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:padding="10dp"
        android:textSize="20dp"
        android:text="@string/game_name"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/prompt"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/door_button_0"
            android:scaleType="fitCenter"
            android:background="@drawable/door"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_margin="15dp"/>
        <ImageButton
            android:id="@+id/door_button_1"
            android:scaleType="fitCenter"
            android:background="@drawable/door"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_margin="15dp"
            android:src="@drawable/door"/>
        <ImageButton
            android:id="@+id/door_button_2"
            android:scaleType="fitCenter"
            android:background="@drawable/door"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_margin="15dp"
            android:src="@drawable/door"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/reset_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/reset"
            android:visibility="gone"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Tap any door to play!"
            android:maxLines="2"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/prompt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textAlignment="center"
        android:visibility="gone">
        <TextView
            android:id="@+id/words"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/false_door"
            android:textAlignment="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/prompt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textAlignment="center"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/second_choice"
            android:textAlignment="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/prompt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">
        <Button
            android:id="@+id/yes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:layout_marginLeft="100dp"/>
        <Button
            android:id="@+id/no_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:layout_marginLeft="0dp"/>
    </LinearLayout>
</LinearLayout>